server/src/VelocityParser.ts
// Generated from ../syntaxes/VelocityParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { VelocityParserListener } from "./VelocityParserListener";

export class VelocityParser extends Parser {
	public static readonly Code = 1;
	public static readonly EscapeCode = 2;
	public static readonly BlockComment = 3;
	public static readonly LineComment = 4;
	public static readonly UnparsedStart = 5;
	public static readonly Directive = 6;
	public static readonly Reference = 7;
	public static readonly UnparsedEnd = 8;
	public static readonly BANG = 9;
	public static readonly LCURLY = 10;
	public static readonly EMPTY1 = 11;
	public static readonly Identifier = 12;
	public static readonly EMPTY2 = 13;
	public static readonly DOT = 14;
	public static readonly EMPTY3 = 15;
	public static readonly RCURLY = 16;
	public static readonly PIPE = 17;
	public static readonly VTL_UNKNOWN0 = 18;
	public static readonly EMPTY4 = 19;
	public static readonly AT = 20;
	public static readonly EMPTYD3 = 21;
	public static readonly BREAK = 22;
	public static readonly SET = 23;
	public static readonly FOR = 24;
	public static readonly IF = 25;
	public static readonly ELSEIF = 26;
	public static readonly ELSE = 27;
	public static readonly END = 28;
	public static readonly STOP = 29;
	public static readonly PARSE = 30;
	public static readonly INCLUDE = 31;
	public static readonly EVALUATE = 32;
	public static readonly DEFINE = 33;
	public static readonly MACRO = 34;
	public static readonly DIR_WhiteSpace = 35;
	public static readonly VTL_UNKNOWN1 = 36;
	public static readonly NUMBER = 37;
	public static readonly BOOL = 38;
	public static readonly LPAREN = 39;
	public static readonly RPAREN = 40;
	public static readonly DPOINT = 41;
	public static readonly COLON = 42;
	public static readonly COMMA = 43;
	public static readonly DQUOTE = 44;
	public static readonly STRING = 45;
	public static readonly IN = 46;
	public static readonly LBRAK = 47;
	public static readonly RBRAK = 48;
	public static readonly PLUS = 49;
	public static readonly MINUS = 50;
	public static readonly DIV = 51;
	public static readonly MULT = 52;
	public static readonly MODUL = 53;
	public static readonly AND = 54;
	public static readonly OR = 55;
	public static readonly NOT = 56;
	public static readonly LT = 57;
	public static readonly GT = 58;
	public static readonly LE = 59;
	public static readonly GE = 60;
	public static readonly EQ = 61;
	public static readonly NE = 62;
	public static readonly ATTRIB = 63;
	public static readonly Whitespace = 64;
	public static readonly Newline = 65;
	public static readonly TEXT = 66;
	public static readonly ESCAPETEXT = 67;
	public static readonly RULE_templateFile = 0;
	public static readonly RULE_template = 1;
	public static readonly RULE_reference = 2;
	public static readonly RULE_call = 3;
	public static readonly RULE_indexcall = 4;
	public static readonly RULE_methodcall = 5;
	public static readonly RULE_functioncall = 6;
	public static readonly RULE_arglist = 7;
	public static readonly RULE_expr = 8;
	public static readonly RULE_literal = 9;
	public static readonly RULE_stringTemplate = 10;
	public static readonly RULE_collection = 11;
	public static readonly RULE_dictionary = 12;
	public static readonly RULE_range = 13;
	public static readonly RULE_directive = 14;
	public static readonly RULE_dirSet = 15;
	public static readonly RULE_dirParse = 16;
	public static readonly RULE_dirInclude = 17;
	public static readonly RULE_dirEvaluate = 18;
	public static readonly RULE_dirStop = 19;
	public static readonly RULE_dirBreak = 20;
	public static readonly RULE_dirMacrocall = 21;
	public static readonly RULE_dirDefine = 22;
	public static readonly RULE_dirFor = 23;
	public static readonly RULE_dirIf = 24;
	public static readonly RULE_dirElseif = 25;
	public static readonly RULE_dirElse = 26;
	public static readonly RULE_dirEnd = 27;
	public static readonly RULE_dirMacroDef = 28;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"templateFile", "template", "reference", "call", "indexcall", "methodcall", 
		"functioncall", "arglist", "expr", "literal", "stringTemplate", "collection", 
		"dictionary", "range", "directive", "dirSet", "dirParse", "dirInclude", 
		"dirEvaluate", "dirStop", "dirBreak", "dirMacrocall", "dirDefine", "dirFor", 
		"dirIf", "dirElseif", "dirElse", "dirEnd", "dirMacroDef",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, "'#[['", "'#'", 
		"'$'", "']]#'", "'!'", undefined, undefined, undefined, undefined, "'.'", 
		undefined, undefined, "'|'", undefined, undefined, "'@'", undefined, "'break'", 
		"'set'", "'foreach'", "'if'", "'elseif'", "'else'", "'end'", "'stop'", 
		"'parse'", "'include'", "'evaluate'", "'define'", "'macro'", undefined, 
		undefined, undefined, undefined, "'('", "')'", "'..'", "':'", "','", undefined, 
		undefined, "'in'", "'['", "']'", "'+'", "'-'", "'/'", "'*'", "'%'", undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "'='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "Code", "EscapeCode", "BlockComment", "LineComment", "UnparsedStart", 
		"Directive", "Reference", "UnparsedEnd", "BANG", "LCURLY", "EMPTY1", "Identifier", 
		"EMPTY2", "DOT", "EMPTY3", "RCURLY", "PIPE", "VTL_UNKNOWN0", "EMPTY4", 
		"AT", "EMPTYD3", "BREAK", "SET", "FOR", "IF", "ELSEIF", "ELSE", "END", 
		"STOP", "PARSE", "INCLUDE", "EVALUATE", "DEFINE", "MACRO", "DIR_WhiteSpace", 
		"VTL_UNKNOWN1", "NUMBER", "BOOL", "LPAREN", "RPAREN", "DPOINT", "COLON", 
		"COMMA", "DQUOTE", "STRING", "IN", "LBRAK", "RBRAK", "PLUS", "MINUS", 
		"DIV", "MULT", "MODUL", "AND", "OR", "NOT", "LT", "GT", "LE", "GE", "EQ", 
		"NE", "ATTRIB", "Whitespace", "Newline", "TEXT", "ESCAPETEXT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(VelocityParser._LITERAL_NAMES, VelocityParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return VelocityParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "VelocityParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return VelocityParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return VelocityParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(VelocityParser._ATN, this);
	}
	// @RuleVersion(0)
	public templateFile(): TemplateFileContext {
		let _localctx: TemplateFileContext = new TemplateFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, VelocityParser.RULE_templateFile);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 58;
			this.template();
			this.state = 59;
			this.match(VelocityParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public template(): TemplateContext {
		let _localctx: TemplateContext = new TemplateContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, VelocityParser.RULE_template);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					this.state = 65;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case VelocityParser.Code:
						{
						this.state = 61;
						this.match(VelocityParser.Code);
						}
						break;
					case VelocityParser.EscapeCode:
						{
						this.state = 62;
						this.match(VelocityParser.EscapeCode);
						}
						break;
					case VelocityParser.Directive:
						{
						this.state = 63;
						this.directive();
						}
						break;
					case VelocityParser.Reference:
						{
						this.state = 64;
						this.reference();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public reference(): ReferenceContext {
		let _localctx: ReferenceContext = new ReferenceContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, VelocityParser.RULE_reference);
		let _la: number;
		try {
			let _alt: number;
			this.state = 98;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 70;
				this.match(VelocityParser.Reference);
				this.state = 72;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === VelocityParser.BANG) {
					{
					this.state = 71;
					this.match(VelocityParser.BANG);
					}
				}

				this.state = 74;
				this.match(VelocityParser.Identifier);
				this.state = 78;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 75;
						this.call();
						}
						}
					}
					this.state = 80;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
				}
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 81;
				this.match(VelocityParser.Reference);
				this.state = 83;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === VelocityParser.BANG) {
					{
					this.state = 82;
					this.match(VelocityParser.BANG);
					}
				}

				this.state = 85;
				this.match(VelocityParser.LCURLY);
				this.state = 86;
				this.match(VelocityParser.Identifier);
				this.state = 90;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === VelocityParser.DOT || _la === VelocityParser.LBRAK) {
					{
					{
					this.state = 87;
					this.call();
					}
					}
					this.state = 92;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 95;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === VelocityParser.PIPE) {
					{
					this.state = 93;
					this.match(VelocityParser.PIPE);
					this.state = 94;
					this.literal();
					}
				}

				this.state = 97;
				this.match(VelocityParser.RCURLY);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public call(): CallContext {
		let _localctx: CallContext = new CallContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, VelocityParser.RULE_call);
		try {
			this.state = 103;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 100;
				this.indexcall();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 101;
				this.methodcall();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 102;
				this.functioncall();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public indexcall(): IndexcallContext {
		let _localctx: IndexcallContext = new IndexcallContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, VelocityParser.RULE_indexcall);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 105;
			this.match(VelocityParser.LBRAK);
			this.state = 106;
			this.expr(0);
			this.state = 107;
			this.match(VelocityParser.RBRAK);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public methodcall(): MethodcallContext {
		let _localctx: MethodcallContext = new MethodcallContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, VelocityParser.RULE_methodcall);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this.match(VelocityParser.DOT);
			this.state = 110;
			this.match(VelocityParser.Identifier);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functioncall(): FunctioncallContext {
		let _localctx: FunctioncallContext = new FunctioncallContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, VelocityParser.RULE_functioncall);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 112;
			this.match(VelocityParser.DOT);
			this.state = 113;
			this.match(VelocityParser.Identifier);
			this.state = 114;
			this.match(VelocityParser.LPAREN);
			this.state = 116;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === VelocityParser.Reference || _la === VelocityParser.LCURLY || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & ((1 << (VelocityParser.NUMBER - 37)) | (1 << (VelocityParser.BOOL - 37)) | (1 << (VelocityParser.LPAREN - 37)) | (1 << (VelocityParser.DQUOTE - 37)) | (1 << (VelocityParser.STRING - 37)) | (1 << (VelocityParser.LBRAK - 37)) | (1 << (VelocityParser.NOT - 37)))) !== 0)) {
				{
				this.state = 115;
				this.arglist();
				}
			}

			this.state = 118;
			this.match(VelocityParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arglist(): ArglistContext {
		let _localctx: ArglistContext = new ArglistContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, VelocityParser.RULE_arglist);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 120;
			this.expr(0);
			this.state = 125;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === VelocityParser.COMMA) {
				{
				{
				this.state = 121;
				this.match(VelocityParser.COMMA);
				this.state = 122;
				this.expr(0);
				}
				}
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExprContext = new ExprContext(this._ctx, _parentState);
		let _prevctx: ExprContext = _localctx;
		let _startState: number = 16;
		this.enterRecursionRule(_localctx, 16, VelocityParser.RULE_expr, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 141;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				{
				this.state = 129;
				this.match(VelocityParser.LPAREN);
				this.state = 130;
				this.expr(0);
				this.state = 131;
				this.match(VelocityParser.RPAREN);
				}
				break;

			case 2:
				{
				this.state = 133;
				this.match(VelocityParser.NOT);
				this.state = 134;
				this.expr(12);
				}
				break;

			case 3:
				{
				this.state = 135;
				this.reference();
				}
				break;

			case 4:
				{
				this.state = 136;
				this.literal();
				}
				break;

			case 5:
				{
				this.state = 137;
				this.stringTemplate();
				}
				break;

			case 6:
				{
				this.state = 138;
				this.collection();
				}
				break;

			case 7:
				{
				this.state = 139;
				this.range();
				}
				break;

			case 8:
				{
				this.state = 140;
				this.dictionary();
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 184;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 182;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 143;
						if (!(this.precpred(this._ctx, 20))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 20)");
						}
						this.state = 144;
						this.match(VelocityParser.OR);
						this.state = 145;
						this.expr(21);
						}
						break;

					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 146;
						if (!(this.precpred(this._ctx, 19))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 19)");
						}
						this.state = 147;
						this.match(VelocityParser.AND);
						this.state = 148;
						this.expr(20);
						}
						break;

					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 149;
						if (!(this.precpred(this._ctx, 18))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 18)");
						}
						this.state = 150;
						this.match(VelocityParser.LE);
						this.state = 151;
						this.expr(19);
						}
						break;

					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 152;
						if (!(this.precpred(this._ctx, 17))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 17)");
						}
						this.state = 153;
						this.match(VelocityParser.LT);
						this.state = 154;
						this.expr(18);
						}
						break;

					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 155;
						if (!(this.precpred(this._ctx, 16))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 16)");
						}
						this.state = 156;
						this.match(VelocityParser.GE);
						this.state = 157;
						this.expr(17);
						}
						break;

					case 6:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 158;
						if (!(this.precpred(this._ctx, 15))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 15)");
						}
						this.state = 159;
						this.match(VelocityParser.GT);
						this.state = 160;
						this.expr(16);
						}
						break;

					case 7:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 161;
						if (!(this.precpred(this._ctx, 14))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 14)");
						}
						this.state = 162;
						this.match(VelocityParser.EQ);
						this.state = 163;
						this.expr(15);
						}
						break;

					case 8:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 164;
						if (!(this.precpred(this._ctx, 13))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 13)");
						}
						this.state = 165;
						this.match(VelocityParser.NE);
						this.state = 166;
						this.expr(14);
						}
						break;

					case 9:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 167;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 168;
						this.match(VelocityParser.PLUS);
						this.state = 169;
						this.expr(12);
						}
						break;

					case 10:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 170;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 171;
						this.match(VelocityParser.MINUS);
						this.state = 172;
						this.expr(11);
						}
						break;

					case 11:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 173;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 174;
						this.match(VelocityParser.MULT);
						this.state = 175;
						this.expr(10);
						}
						break;

					case 12:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 176;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 177;
						this.match(VelocityParser.DIV);
						this.state = 178;
						this.expr(9);
						}
						break;

					case 13:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, VelocityParser.RULE_expr);
						this.state = 179;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 180;
						this.match(VelocityParser.MODUL);
						this.state = 181;
						this.expr(8);
						}
						break;
					}
					}
				}
				this.state = 186;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literal(): LiteralContext {
		let _localctx: LiteralContext = new LiteralContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, VelocityParser.RULE_literal);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 187;
			_la = this._input.LA(1);
			if (!(((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & ((1 << (VelocityParser.NUMBER - 37)) | (1 << (VelocityParser.BOOL - 37)) | (1 << (VelocityParser.STRING - 37)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
